testdata/invalid/unknown-surface.hzn
package probes

@bogus_surface("foo")
func BadAttach(ctx tracepoint.Exec) i32 {
    return 0
}
